@@ -15,6 +15,12 @@
 --add-opens=java.base/jdk.internal.loader=ALL-UNNAMED
 ```
 
+(Optional):
+```
+-XX:+EnableDynamicAgentLoading
+-Djdk.instrument.traceUsage
+```
+
 ## Compatibility Matrix
 **NOTE: THIS REQUIRES AT LEAST JAVA 9 FOR IT TO RUN IN ORDER TO GET IT RUNNING ON OLDER VERSIONS SET use-native-transport=false IN THE server.properties TO true** 
 
